--- a/views/status.html
+++ b/views/status.html
@@ -9,7 +9,7 @@
         <h1>Active Timepieces for {{ user }}</h1>
         <nav>
             <a href="/create"><button type="button" class="btn btn-primary m-3">New Clock</button></a>
-            <button type="button" class="btn btn-secondary m-3">Logout</button>
+            <a href="/logout"><button type="button" class="btn btn-secondary m-3">Logout</button></a>
         </nav>
         <ul class="list-group list-group-flush">
         {% for clock in clocks %}
